force-app/main/default/objects/Plan_Knowledge_Article__c/Plan_Knowledge_Article__c.object-meta.xml
<CustomObject>
    <description>In-org knowledge base used by the Ohanafy Plan Copilot to ground responses (customer profile, playbooks, supplier notes). Read-only from LWC.</description>
    <label>Plan Knowledge Article</label>
    <nameField>
        <displayFormat>KB-{00000000}</displayFormat>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Knowledge Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>