force-app/main/default/objects/Plan_Knowledge_Article__c/fields/Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Article_Id__c</fullName>
    <description>Stable kebab-case identifier (e.g. hurricane-playbook). External-id key used by the seed loader to upsert.</description>
    <externalId>true</externalId>
    <label>Article Id</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>