force-app/main/default/objects/Plan_Knowledge_Article__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Long-form article body. Surfaced (truncated) in the Copilot Sources card.</description>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>