force-app/main/default/objects/Plan_Knowledge_Article__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Citation/provenance for the article body.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>