force-app/main/default/objects/Plan_Knowledge_Article__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Comma-separated tag list (e.g. "hurricane,weather,playbook,gulf"). Used for tag-overlap grounding in the Copilot.</description>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>